2006-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	Daniel Sebald has pointed out that when the same plot is being redrawn
	repeatedly, for instance during interactive rotation of 3D plots, the
	process is noticibly slowed by resending the color palette on each 
	refresh. The following set of changes insures that the palette is only
	sent if something has changed.

	* src/color.c (make_palette): Do not call term->make_palette() unless
	either (a) the palette has changes, (b) the terminal has changed, or
	(c) the output device has changed.  New routine invalidate_palette()
	is available to signal that one of these conditions has occurred.

	* src/set.c (set_output set_palette set_palette_defined):
	Call invalidate_palette().  Also fix a memory leak.

	* src/term.c (change_term): Call invalidate_palette().

2006-03-17  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (exec_cmd): Realigned conditional code to allow
	compilation with ./configure --with-image --disable-binary-x11-polygon.
	Fix conditional test associated whith ./configure --disable-with-image.

2006-03-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/fit.c (splitpath): Reorder tests avoid possible read of
	uninitialized memory.

	* src/alloc.c (gp_alloc): Cast to (generic *)
	(checked_free): Introduced new local variable to reduce number of
	horrible casts.

	* src/hidden3d.c (build_networks): Initialize lp_style from
	lp_properties, regardless of whether the plot supposedly has point
	symbols drawn or not.  Needed because PM3D drops stuff inside that
	struct.

2006-03-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/aquaterm.trm: Correction of misprints.

2006-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_tic_prop): Another bandaid to protect against
	int_error() from inside try_to_get_string().  Bug #1434633.

2006-03-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Reorder code so that mutually exclusive